// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Snapshots renders the text input UI snapshot correctly 1`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextarea-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextarea"
    id="myTextarea-label"
  >
    Custom textarea Label
  </label>
  <div
    className="css-79elbk"
  >
    <textarea
      autoComplete={null}
      className="chakra-textarea css-0"
      disabled={false}
      id="myTextarea"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Textarea Placeholder"
      required={false}
      step={null}
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 2`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <span>
       (required)
    </span>
  </label>
  <div
    className="css-79elbk"
  >
    <input
      aria-required={true}
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={true}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 3`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <span>
       (Obiligatoire)
    </span>
  </label>
  <div
    className="css-79elbk"
  >
    <input
      aria-required={true}
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={true}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 4`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
  </label>
  <div
    className="css-79elbk"
  >
    <input
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={false}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 5`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <div
    className="css-79elbk"
  >
    <input
      aria-label="Custom Input Label"
      aria-required={true}
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={true}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 6`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <span>
       (required)
    </span>
  </label>
  <div
    className="css-79elbk"
  >
    <input
      aria-describedby="myTextInput-helperText"
      aria-required={true}
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={true}
      step={null}
      type="text"
    />
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="myTextInput-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Custom helper text",
        }
      }
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 7`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <span>
       (required)
    </span>
  </label>
  <div
    className="css-79elbk"
  >
    <input
      aria-describedby="myTextInput-helperText"
      aria-invalid={true}
      aria-required={true}
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={true}
      step={null}
      type="text"
    />
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={true}
    data-testid="ds-helperErrorText"
    id="myTextInput-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "There is an error related to this field.",
        }
      }
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 8`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
    <span>
       (required)
    </span>
  </label>
  <div
    className="css-79elbk"
  >
    <input
      aria-required={true}
      autoComplete={null}
      className="chakra-input css-0"
      disabled={true}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={true}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 9`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="myTextInput-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="myTextInput"
    id="myTextInput-label"
  >
    Custom Input Label
  </label>
  <div
    className="css-79elbk"
  >
    <input
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="myTextInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={false}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 10`] = `
<div
  className="css-1y4kn3e"
  data-testid="ds-textInput"
  id="chakra-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="chakra"
    id="chakra-label"
  >
    Custom Input Label
  </label>
  <div
    className="css-79elbk"
  >
    <input
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="chakra"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={false}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 11`] = `
<div
  className="css-1u8qly9"
  data-testid="props"
  id="props-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="props"
    id="props-label"
  >
    Custom Input Label
  </label>
  <div
    className="css-79elbk"
  >
    <input
      autoComplete={null}
      className="chakra-input css-0"
      disabled={false}
      id="props"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={false}
      step={null}
      type="text"
    />
  </div>
</div>
`;

exports[`UI Snapshots renders the text input UI snapshot correctly 12`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-textInput"
  id="autocomplete-componentWrapper"
>
  <label
    className="css-1xdhyk6"
    data-testid="ds-label"
    htmlFor="autocomplete"
    id="autocomplete-label"
  >
    Custom Input Label
  </label>
  <div
    className="css-79elbk"
  >
    <input
      autoComplete="name"
      className="chakra-input css-0"
      disabled={false}
      id="autocomplete"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Input Placeholder"
      required={false}
      step={null}
      type="text"
    />
  </div>
</div>
`;
